新增 ouput complete 方法 設定相關 html css  ts等動作 可以將多個被選取的book移至某個category

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -59,6 +59,9 @@ $transition: all .17s cubic-bezier(.4, 0, 1, 1);
   .insta-page {
     padding: 10px;
   }
+  .selected {
+    background-color: yellow;
+  }
 }
 
 .image {
