--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,3 @@
-<!-- <h2>list1: {{ list1 | json}}</h2>
-<ul [ngxHmDnd]="'group-1'" [sourceData]="list1">
-  <li *ngFor="let item of list1; let i = index;">
-    {{item}}
-  </li>
-</ul>
-
-<h2>list2: {{ list2 | json}}</h2>
-<ul [ngxHmDnd]="'group-1'" [sourceData]="list2">
-  <ng-container *ngIf="list2.length>0;else ee">
-      <li *ngFor="let item of list2; let i = index;">
-          {{item}}
-        </li>
-  </ng-container>
-  <ng-template #ee>
-    <li>
-
-        jkljkl
-        fdsfsd<br>
-        fdsfsd<br>
-        fdsfsd
-    </li>
-  </ng-template>
-</ul> -->
-
-<!-- <h2>list3: {{ list3 | json}}</h2>
-<ul [ngxHmDnd]="'group-1'" [sourceData]="list3">
-  <li *ngFor="let item of list3; let i = index;">
-    {{item}}
-  </li>
-</ul> -->
-
 <nav id="nav">
   <ul [ngxHmDnd]="'group-1'" [sourceData]="bookCategory" [enable]="false">
     <li *ngFor="let category of bookCategory; let i = index;"
@@ -42,8 +10,11 @@
 
 <h2>{{ bookCategory[selectedIndex].name }}</h2>
 <div *ngIf="display" class="image-wrapper"
-  [ngxHmDnd]="'group-1'" [sourceData]="bookCategory[selectedIndex].books">
-  <div class="image-item insta-page" *ngFor="let book of bookCategory[selectedIndex].books; let i = index;">
+  [ngxHmDnd]="'group-1'" [sourceData]="bookCategory[selectedIndex].books" (complete)="complete($event)">
+  <div class="image-item insta-page"
+    *ngFor="let book of bookCategory[selectedIndex].books; let i = index;"
+    [ngClass]="{'selected': book.checked}"
+    (click)="book.checked = !book.checked">
      <a class="image insta-image">
        <img alt="image" [src]="book.path" />
       </a>
