增加判斷 讓如果book 的 checked 為 true時，必須停用排序功能

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,8 +13,9 @@
   [ngxHmDnd]="'group-1'" [sourceData]="bookCategory[selectedIndex].books" (complete)="complete($event)">
   <div class="image-item insta-page"
     *ngFor="let book of bookCategory[selectedIndex].books; let i = index;"
+    [attr.sortEnable]="!book.checked"
     [ngClass]="{'selected': book.checked}"
-    (click)="book.checked = !book.checked">
+    (click)="book.checked = !book.checked" >
      <a class="image insta-image">
        <img alt="image" [src]="book.path" />
       </a>
